<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"

    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="50sp"
        android:text="@string/wbb"
        android:textColor="@color/colour1"
        android:textSize="40sp"

        android:textStyle="bold">

    </TextView>

    <EditText
        android:id="@+id/nameBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/textbox_style"
        android:hint="@string/name"
        android:inputType="textPersonName"/>
    <EditText
        android:id="@+id/emailBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/textbox_style"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/textbox_style"
        android:hint="@string/your_password"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/createBtn"

        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/create_an_account"
        app:cornerRadius="100dp" />

    <Button
        android:id="@+id/loginBtn"
android:backgroundTint="@color/colour2"
        android:textStyle="bold"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/already_have_an_account"
        app:cornerRadius="100dp" />




</LinearLayout>