<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="50sp"
        android:text="@string/wb"
        android:textColor="@color/colour1"
        android:textSize="50sp"

        android:textStyle="bold">

    </TextView>

    <EditText
        android:id="@+id/emailBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/textbox_style"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/textbox_style"
        android:hint="@string/your_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginBtn"

        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        app:cornerRadius="100dp" />
    <Button
        android:id="@+id/createBtn"

        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/join_us"
        app:cornerRadius="100dp" />


</LinearLayout>