<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".DashboardActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="518dp"
        android:layout_marginBottom="558dp"
        android:background="#FFFFFF"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="103dp"
                android:layout_height="93dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/create_room_first"
                android:textColor="@color/colour1" />

            <EditText
                android:id="@+id/codeBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:background="@drawable/textbox_style"
                android:ems="10"
                android:hint="Room Code"
                android:inputType="textPersonName"
                android:textStyle="italic" />

            <Button
                android:id="@+id/joinBtn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="90dp"
                android:gravity="center"

                android:text="@string/join"
                app:cornerRadius="100dp" />

            <Button
                android:id="@+id/shareBtn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/share"
                android:textStyle="bold"
                app:cornerRadius="100dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>